fix: api smoke accepts 2xx-4xx (401/403 means service is up)